colang-cli/tests/samples/features/return/compile_error/with_value_from_void_function.co
fun foo(x: int) {
  if (x == 4) {
    return 5;
  }

  assert(false);
}

fun main() { }
